--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-Learning_Project_2020-2
+Learning_Project_2020-2/1.c
+Learning_Project_2020-2/2.c
 .vscode/c_cpp_properties.json
 .vscode/tasks.json
