--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-Learning_Project_2020-2/1.c
-Learning_Project_2020-2/2.c
+Learning_Project_2020-2/
 .vscode/c_cpp_properties.json
 .vscode/tasks.json
