--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "scm.alwaysShowActions": true,
     "git.postCommitCommand": "push",
     "git.fetchOnPull": true,
-    "git.autofetch": true
+    "git.autofetch": true,
+    "files.associations": {
+        "ostream": "cpp"
+    }
 }
