--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
     "git.autofetch": true,
     "files.associations": {
         "ostream": "cpp",
-        "random": "c"
+        "random": "c",
+        "string_view": "c",
+        "sstream": "c"
     }
 }
