--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,10 +41,30 @@
             "problemMatcher": [
                 "$g++"
             ],
+            "group": "build"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: cpp 활성 파일 빌드",
+            "command": "/usr/bin/cpp",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "detail": "디버거에서 생성된 작업입니다."
         }
     ]
 }
