--- a/.gitignore
+++ b/.gitignore
@@ -943,3 +943,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudio,visualstudiocode,webstorm,intellij,gradle,java,c++,python,jupyternotebooks
+JAVA/test/src/main/java/Main.java
