--- a/.gitignore
+++ b/.gitignore
@@ -944,3 +944,5 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudio,visualstudiocode,webstorm,intellij,gradle,java,c++,python,jupyternotebooks
 JAVA/test/src/main/java/Main.java
+AI/dogs-vs-cats/
+AI/dogs-vs-cats_small/
