--- a/Web_DB_Programming/package.json
+++ b/Web_DB_Programming/package.json
@@ -9,6 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ansi-colors": "^4.1.3"
+    "ansi-colors": "^4.1.3",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "Express": "^3.0.1",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0"
   }
 }
