--- a/Web_DB_Programming/package.json
+++ b/Web_DB_Programming/package.json
@@ -12,10 +12,13 @@
     "ansi-colors": "^4.1.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "Express": "^3.0.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mysql2": "^3.11.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
