--- a/Web_DB_Programming/package.json
+++ b/Web_DB_Programming/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ansi-colors": "^4.1.3",
     "cookie-parser": "^1.4.7",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
