--- a/Web_DB_Programming/package.json
+++ b/Web_DB_Programming/package.json
@@ -18,8 +18,10 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "mongoose": "^8.8.2",
     "mysql2": "^3.11.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "update": "^0.7.4"
   }
 }
